Altered Spacing Issues + Updated Gallery Pictures and Layout

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ p {
   .Title {
     font-size: 5rem;
     padding-bottom: 0.75vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 }
 
@@ -70,6 +71,7 @@ p {
   .Title {
     font-size: 4.1rem;
     padding-bottom: 0.75vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 }
 
@@ -91,6 +93,7 @@ p {
   .Title {
     font-size: 4rem;
     padding-bottom: 0.75vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 }
 
@@ -112,6 +115,7 @@ p {
   .Title {
     font-size: 3.75rem;
     padding-bottom: 0.75vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 }
 
@@ -133,5 +137,6 @@ p {
   .Title {
     font-size: 3.5rem;
     padding-bottom: 0.75vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 }
